[tool.poetry]
name = "mlds6cluster"
version = "0.1.0"
description = "Imagenes de clustering en un cli"
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
