[tool.poetry]
name = "mlds6cluster"
version = "0.1.0"
description = "Imagenes de clustering en un cli"
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^8.6.0"
jupytext = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
